tests/baselines/reference/augmentedTypesEnum.errors.txt
augmentedTypesEnum.ts(2,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(3,5): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(6,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(7,10): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(9,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(10,5): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(13,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(14,7): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(17,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(18,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(20,6): error TS2567: Enum declarations can only merge with namespace declarations.
augmentedTypesEnum.ts(21,6): error TS2567: Enum declarations can only merge with namespace declarations.


==== augmentedTypesEnum.ts (12 errors) ====
    // enum then var
    enum e1111 { One } // error
         ~~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    var e1111 = 1; // error
        ~~~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    // enum then function
    enum e2 { One } // error
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    function e2() { } // error
             ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    enum e3 { One } // error
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    var e3 = () => { } // error
        ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    // enum then class
    enum e4 { One } // error
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    class e4 { public foo() { } } // error
          ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    // enum then enum
    enum e5 { One }
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    enum e5 { Two } // error
         ~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    enum e5a { One } // error
         ~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    enum e5a { One } // error
         ~~~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
    
    // enum then internal module
    enum e6 { One } 
    module e6 { } // ok
    
    enum e6a { One }
    module e6a { var y = 2; } // should be error
    
    enum e6b { One }
    module e6b { export var y = 2; } // should be error
    
    // enum then import, messes with error reporting
    //enum e7 { One }
    //import e7 = require(''); // should be error